fix: solved the image not visible problem on wishlist like icon and added all the header's option in header menu

--- a/public/frontend/css/responsive.css
+++ b/public/frontend/css/responsive.css
@@ -461,7 +461,8 @@ Version:1.0
 	display: none;
 }
 .header.shop .right-bar {
-	display: none;
+	/* display: none; */
+	margin-bottom: 25px;
 }
 .header .middle-inner{
 	width:100%;
@@ -1174,7 +1175,8 @@ Version:1.0
 	display: none;
 }
 .header.shop .right-bar {
-	display: none;
+	/* display: none; */
+	margin-bottom: 25px;
 }
 /* Header Search */
 .header.shop .search-top {
